--- a/.github/workflows/common_tests.yaml
+++ b/.github/workflows/common_tests.yaml
@@ -109,7 +109,7 @@ jobs:
         if: ${{ steps.list-changed.outputs.changes_detected }} == 'true'
         uses: nolar/setup-k3d-k3s@v1
         with:
-          version: v1.25.4+k3s1
+          version: v1.25.4
           k3d-args: -p 31990-31999:31990-31999@server:0
 
       - name: Remove node taints
