--- a/.github/workflows/common_tests.yaml
+++ b/.github/workflows/common_tests.yaml
@@ -109,7 +109,7 @@ jobs:
         if: ${{ steps.list-changed.outputs.changes_detected }} == 'true'
         uses: nolar/setup-k3d-k3s@v1
         with:
-          version: v1.25.3+k3s1
+          version: v1.22.4+k3s1
 
       - name: Run chart-testing (install)
         if: ${{ steps.list-changed.outputs.changes_detected }} == 'true'
@@ -117,4 +117,4 @@ jobs:
           ct install  --config .github/ct-install.yaml \
                       --charts "${{ steps.list-changed.outputs.changed_charts }}" \
                       --upgrade
-                      # --debug
+                      --debug
