--- a/.github/workflows/common_tests.yaml
+++ b/.github/workflows/common_tests.yaml
@@ -116,5 +116,5 @@ jobs:
         run: |
           ct install  --config .github/ct-install.yaml \
                       --charts "${{ steps.list-changed.outputs.changed_charts }}" \
-                      --upgrade
+                      --upgrade \
                       --debug
