--- a/.github/workflows/common_library_tests.yaml
+++ b/.github/workflows/common_library_tests.yaml
@@ -111,7 +111,8 @@ jobs:
         with:
           # version: v1.22.4+k3s1
           # This version greps wrong deployment name and it fails.
-          version: v1.25.4+k3s1
+          # version: v1.25.4+k3s1
+          version: v1.24
 
       - name: Run chart-testing (install)
         if: ${{ steps.list-changed.outputs.changes_detected }} == 'true'
