--- a/charts/stable/vikunja/Chart.yaml
+++ b/charts/stable/vikunja/Chart.yaml
@@ -28,7 +28,7 @@ sources:
   - https://vikunja.io/docs
 version: 6.0.22
 annotations:
-  truecharts.org/catagories: |
+  truecharts.org/categories: |
     - productivity
   truecharts.org/SCALE-support: "true"
   truecharts.org/grade: U
