--- a/charts/stable/vikunja/values.yaml
+++ b/charts/stable/vikunja/values.yaml
@@ -35,6 +35,11 @@ configmap:
               client_max_body_size {{ .Values.env.VIKUNJA_FILES_MAXSIZE | upper | trimSuffix "B" }};
           }
         }
+      # -- Provide Vikunja config as YAML string
+      vikunja.yaml: |-
+        service:
+          jwtsecret: "myVeryComplexJWTSecret"
+        # {{ .Values.vikunja.config | indent 8 }}
 
 env:
   VIKUNJA_REDIS_ENABLED: 1
@@ -99,6 +104,11 @@ service:
         port: 10220
         targetPort: 8080
 
+additionalVolumeMounts:
+  - name: vikunja-yaml-config
+    mountPath: "/etc/vikunja/config.yml"
+    subPath: vikunja.yaml
+
 additionalContainers:
   frontend:
     name: frontend
@@ -110,7 +120,7 @@ additionalContainers:
       - containerPort: 8080
         name: main
     volumeMounts:
-      - name: vikunja-config
+      - name: vikunja-nginx-config
         mountPath: "/etc/nginx/conf.d/default.conf"
         subPath: nginx-config
         readOnly: true
@@ -119,14 +129,22 @@ persistence:
   files:
     enabled: true
     mountPath: "/app/vikunja/files"
-  vikunja-config:
-    enabled: "true"
+  vikunja-nginx-config:
+    enabled: true
     mountPath: "/etc/nginx/conf.d/default.conf"
     subPath: "nginx-config"
     type: "custom"
     volumeSpec:
       configMap:
-        name: '{{ printf "%v-config" (include "tc.common.names.fullname" .) }}'
+        name: '{{ printf "%v-nginx-config" (include "tc.common.names.fullname" .) }}'
+  vikunja-yaml-config:
+    enabled: true
+    mountPath: "/etc/vikunja/config.yml"
+    subPath: "vikunja.yaml"
+    type: "custom"
+    volumeSpec:
+      configMap:
+        name: {{ printf "%v-yaml-config" (include "tc.common.names.fullname" .) }}
 
 postgresql:
   enabled: true
