--- a/charts/incubator/terraria-tshock/questions.yaml
+++ b/charts/incubator/terraria-tshock/questions.yaml
@@ -29,6 +29,7 @@ questions:
           schema:
             type: string
             default: "1"
+            required: true
             enum:
               - value: "1"
                 description: Small
