--- a/charts/incubator/terraria-tshock/questions.yaml
+++ b/charts/incubator/terraria-tshock/questions.yaml
@@ -64,6 +64,7 @@ questions:
           schema:
             type: int
             default: 16
+            required: true
             min: 1
             max: 255
         - variable: lang
