--- a/charts/incubator/terraria-tshock/questions.yaml
+++ b/charts/incubator/terraria-tshock/questions.yaml
@@ -73,6 +73,7 @@ questions:
           schema:
             type: string
             default: en-US
+            required: true
             enum:
               - value: en-US
                 description: English
