--- a/charts/stable/appdaemon/values.yaml
+++ b/charts/stable/appdaemon/values.yaml
@@ -5,6 +5,7 @@ image:
 
 securityContext:
   runAsNonRoot: false
+  readOnlyRootFilesystem: false
 
 podSecurityContext:
   runAsUser: 0
@@ -19,6 +20,7 @@ env:
   LATITUDE: 46
   LONGITUDE: -94
   ELEVATION: 1217
+  TIMEZONE: "{{ .Values.TZ }}"
 
 service:
   main:
@@ -26,13 +28,6 @@ service:
       main:
         port: 5050
         targetPort: 5050
-  tcp:
-    enabled: true
-    ports:
-      tcp:
-        enabled: true
-        port: 51050
-        targetPort: 51050
 
 persistence:
   conf:
