--- a/charts/incubator/terraria-tshock/values.yaml
+++ b/charts/incubator/terraria-tshock/values.yaml
@@ -1,19 +1,38 @@
-env:
-  GAME_PARAMS: -config serverconfig.txt
 image:
   pullPolicy: IfNotPresent
   repository: tccr.io/truecharts/terraria-tshock
   tag: vtshock@sha256:93dc07c1fbae51e58d02c678aa005b9c2820993255f2f4e4bee3565ebd26f23d
+
+terraria:
+  pass: secretpass
+  autocreate: "1"
+  seed: AwesomeSeed
+  worldname: scale terraria
+  maxplayers: 16
+  lang: en-US
+  easy_game_params:
+    noupnp: true
+    steam: false
+    secure: false
+  game_params: []
+
+podSecurityContext:
+  runAsGroup: 0
+  runAsUser: 0
+
+securityContext:
+  readOnlyRootFilesystem: false
+  runAsNonRoot: false
+
 persistence:
   serverfiles:
     enabled: true
     mountPath: /serverdata/serverfiles
-podSecurityContext:
-  runAsGroup: 0
-  runAsUser: 0
-securityContext:
-  readOnlyRootFilesystem: false
-  runAsNonRoot: false
+
+envFrom:
+  - secretRef:
+      name: '{{ include "tc.common.names.fullname" . }}-secret'
+
 service:
   main:
     ports:
@@ -27,8 +46,6 @@ service:
       tcp:
         enabled: true
         port: 7777
-        protocol: TCP
-        targetPort: 7777
 
 portal:
   enabled: true
