--- a/.github/workflows/common_library_tests.yaml
+++ b/.github/workflows/common_library_tests.yaml
@@ -75,7 +75,7 @@ jobs:
   install:
     needs:
       - lint
-    name: Install Charts
+    name: Install Charts (k3s - {{ $matrix.k3s-version }})
     runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
