--- a/charts/stable/cloudflareddns/questions.yaml
+++ b/charts/stable/cloudflareddns/questions.yaml
@@ -7,110 +7,112 @@ questions:
 # Include{replica1}
 # Include{controllerExpertExtraArgs}
   - variable: secretEnv
-    group: "App Configuration"
-    label: "Image Secrets"
+    group: App Configuration
+    label: Image Secrets
     schema:
       additional_attrs: true
       type: dict
       attrs:
         - variable: CF_APITOKEN
-          label: "CF_APITOKEN"
+          label: CF API Token
           schema:
             type: string
             private: true
             default: ""
         - variable: CF_APIKEY
-          label: "CF_APIKEY"
+          label: CF API Key
           schema:
             type: string
             private: true
             default: ""
         - variable: CF_APITOKEN_ZONE
-          label: "CF_APITOKEN_ZONE"
+          label: CF API Token Zone
           schema:
             type: string
             private: true
             default: ""
   - variable: env
-    group: "App Configuration"
-    label: "Image Environment"
+    group: App Configuration
+    label: Image Environment
     schema:
       additional_attrs: true
       type: dict
       attrs:
         - variable: INTERVAL
-          label: "INTERVAL"
-          description: "Update your DDNS interval in seconds"
+          label: Interval
+          description: Update your DDNS interval in seconds
           schema:
             type: int
             default: 300
         - variable: LOG_LEVEL
-          label: "LOG_LEVEL"
-          description: "Level of detail your logs need"
+          label: Log Level
+          description: Level of detail your logs need
           schema:
             type: int
             default: 3
         - variable: DETECT_MODE
-          label: "DETECTION_MODE"
-          description: "How you want to get your WAN IP"
+          label: Detection Mode
+          description: How you want to get your WAN IP
           schema:
             type: string
-            default: "dig-whoami.cloudflare"
+            default: dig-whoami.cloudflare
             enum:
-              - value: "dig-whoami.cloudflare"
-                description: "dig-whoami.cloudflare"
-              - value: "curl-ifconfig.co"
-                description: "curl-ifconfig.co"
-              - value: "curl-icanhazip.com"
-                description: "curl-icanhazip.com"
-              - value: "curl-wtfismyip.com"
-                description: "curl-wtfismyip.com"
-              - value: "curl-showmyip.ca"
-                description: "curl-showmyip.ca"
-              - value: "curl-da.gd"
-                description: "curl-da.gd"
-              - value: "curl-seeip.org"
-                description: "curl-seeip.org"
-              - value: "dig-google.com"
-                description: "dig-google.com"
-              - value: "dig-opendns.com"
-                description: "dig-opendns.com"
+              - value: dig-whoami.cloudflare
+                description: dig-whoami.cloudflare
+              - value: curl-ifconfig.co
+                description: curl-ifconfig.co
+              - value: curl-icanhazip.com
+                description: curl-icanhazip.com
+              - value: curl-wtfismyip.com
+                description: curl-wtfismyip.com
+              - value: curl-showmyip.ca
+                description: curl-showmyip.ca
+              - value: curl-da.gd
+                description: curl-da.gd
+              - value: curl-seeip.org
+                description: curl-seeip.org
+              - value: dig-google.com
+                description: dig-google.com
+              - value: dig-opendns.com
+                description: dig-opendns.com
         - variable: DETECT_OVERRIDE
-          label: "DETECTION_MODE_OVERRIDE"
-          description: "If you want to set DETECTION_MODE to 'local:eth0' for a local interface, this will override the dropdown selection"
+          label: Detection mode Override
+          description: If you want to set DETECTION_MODE to 'local:eth0' for a local interface, this will override the dropdown selection
           schema:
             type: string
             default: ""
         - variable: CF_USER
-          label: "CF_USER"
-          description: "Cloudflare Username (eg. your.cf.email@example.com)"
+          label: CF User
+          description: Cloudflare Username (eg. your.cf.email@example.com)
           schema:
             type: string
             default: ""
         - variable: CF_HOSTS
-          label: "CF_HOSTS"
-          description: "Cloudflare Hosts (Domains) (eg. test.example.com;test.foobar.com)"
+          label: CF Hosts
+          description: Cloudflare Hosts (Domains) (eg. test.example.com;test.foobar.com)
           schema:
             type: string
+            valid_chars: '^((?!\.cf$|\.ga$|\.gq$|\.ml$|\.tk$).)*$'
             default: ""
         - variable: CF_ZONES
-          label: "CF_ZONES"
-          description: "Cloudflare DNS Zones (eg. example.com;foobar.com;foobar.com)"
+          label: CF Zones
+          description: Cloudflare DNS Zones (eg. example.com;foobar.com;foobar.com)
           schema:
             type: string
+            valid_chars: '^((?!\.cf$|\.ga$|\.gq$|\.ml$|\.tk$).)*$'
             default: ""
         - variable: CF_RECORDTYPES
-          label: "CF_RECORDTYPES"
-          description: "Cloudflare DNS Zones"
+          label: CF Record Types
+          description: Cloudflare DNS Zones
           schema:
             type: string
-            default: "A;A;AAAA"
+            default: A;A;AAAA
 # Include{containerConfig}
 # Include{serviceList}
 # Include{persistenceRoot}
         - variable: config
-          label: "App Config Storage"
-          description: "Stores the Application Configuration."
+          label: App Config Storage
+          description: Stores the Application Configuration.
           schema:
             additional_attrs: true
             type: dict
@@ -120,41 +122,41 @@ questions:
 # Include{security}
 # Include{securityContextAdvancedRoot}
               - variable: privileged
-                label: "Privileged mode"
+                label: Privileged mode
                 schema:
                   type: boolean
                   default: false
               - variable: readOnlyRootFilesystem
-                label: "ReadOnly Root Filesystem"
+                label: ReadOnly Root Filesystem
                 schema:
                   type: boolean
                   default: false
               - variable: allowPrivilegeEscalation
-                label: "Allow Privilege Escalation"
+                label: Allow Privilege Escalation
                 schema:
                   type: boolean
                   default: false
               - variable: runAsNonRoot
-                label: "runAsNonRoot"
+                label: runAsNonRoot
                 schema:
                   type: boolean
                   default: false
 # Include{podSecurityContextRoot}
         - variable: runAsUser
-          label: "runAsUser"
-          description: "The UserID of the user running the application"
+          label: runAsUser
+          description: The UserID of the user running the application
           schema:
             type: int
             default: 0
         - variable: runAsGroup
-          label: "runAsGroup"
-          description: "The groupID this App of the user running the application"
+          label: runAsGroup
+          description: The groupID this App of the user running the application
           schema:
             type: int
             default: 0
         - variable: fsGroup
-          label: "fsGroup"
-          description: "The group that should own ALL storage."
+          label: fsGroup
+          description: The group that should own ALL storage.
           schema:
             type: int
             default: 568
