--- a/charts/stable/gotify/Chart.yaml
+++ b/charts/stable/gotify/Chart.yaml
@@ -1,35 +1,31 @@
 apiVersion: v2
 appVersion: "2.2.2"
-version: 11.0.17
-kubeVersion: ">=1.16.0-0"
-name: gotify
-description: a simple server for sending and receiving messages
-type: application
+dependencies:
+  - name: common
+    repository: https://library-charts.truecharts.org
+    version: 11.1.2
+deprecated: false
+description: A simple server for sending and receiving messages.
 home: https://truecharts.org/charts/stable/gotify
-keywords:
-  - server
-  - gotify
-  - messages
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/gotify.png
+keywords:
+  - gotify
+  - notifications
+kubeVersion: ">=1.16.0-0"
+maintainers:
+  - email: info@truecharts.org
+    name: TrueCharts
+    url: https://truecharts.org
+name: gotify
 sources:
   - https://github.com/truecharts/charts/tree/master/charts/stable/gotify
   - https://gotify.net/
   - https://github.com/gotify/server
   - https://hub.docker.com/r/gotify/server
-dependencies:
-  - name: common
-    repository: https://library-charts.truecharts.org
-    version: 11.1.2
-  - condition: postgresql.enabled
-    name: postgresql
-    repository: https://charts.truecharts.org/
-    version: 11.0.17
-maintainers:
-  - email: info@truecharts.org
-    name: TrueCharts
-    url: https://truecharts.org
+type: application
+version: 12.0.0
 annotations:
   truecharts.org/catagories: |
-    - media
+    - notifications
   truecharts.org/SCALE-support: "true"
   truecharts.org/grade: U
