--- a/charts/stable/gotify/templates/common.yaml
+++ b/charts/stable/gotify/templates/common.yaml
@@ -1,7 +1,8 @@
 {{/* Make sure all variables are set properly */}}
 {{- include "tc.common.loader.init" . }}
 
-{{/* Render configmap for nextcloud */}}
-{{- include "gotify.configmap" . }}
+{{/* Render secret */}}
+{{- include "gotify.secret" . }}
 
+{{/* Render the templates */}}
 {{ include "tc.common.loader.apply" . }}
