--- a/charts/stable/gotify/values.yaml
+++ b/charts/stable/gotify/values.yaml
@@ -3,37 +3,32 @@ image:
   pullPolicy: IfNotPresent
   tag: 2.2.2@sha256:740c2e6236b0d197f2c43b39714b802161fdfec17866dade32966ed4d2c9a7d1
 
-secretEnv:
-  user: "admin"
-  pass: "admin"
-
-env:
-  GOTIFY_SERVER_PORT: 8080
-  GOTIFY_SERVER_KEEPALIVEPERIODSECONDS: 0
-  GOTIFY_SERVER_LISTENADDR: ""
-  GOTIFY_SERVER_SSL_ENABLED: false
+gotify:
+  user: admin
+  pass: admin
+  registration: false
+  keep_alive_period_seconds: 0
+  listen_address: ""
+  ssl_enabled: false
   # lists are a little weird but do-able (:
-  # GOTIFY_SERVER_SSL_LETSENCRYPT_HOSTS: "- mydomain.tld\n- myotherdomain.tld"
-  GOTIFY_SERVER_RESPONSEHEADERS: 'X-Custom-Header: "custom value"'
-  # GOTIFY_SERVER_CORS_ALLOWORIGINS: "- \".+.example.com\"\n- \"otherdomain.com\""
-  # GOTIFY_SERVER_CORS_ALLOWMETHODS: "- \"GET\"\n- \"POST\""
-  # GOTIFY_SERVER_CORS_ALLOWHEADERS: "- \"Authorization\"\n- \"content-type\""
-  # GOTIFY_SERVER_STREAM_ALLOWEDORIGINS: "- \".+.example.com\"\n- \"otherdomain.com\""
-  GOTIFY_SERVER_STREAM_PINGPERIODSECONDS: 45
-  GOTIFY_PASSSTRENGTH: 10
-  GOTIFY_UPLOADEDIMAGESDIR: "data/images"
-  GOTIFY_PLUGINSDIR: "data/plugins"
+  # ssl_letsencrypt_hosts: "- mydomain.tld\n- myotherdomain.tld"
+  response_headers: 'X-Custom-Header: "custom value"'
+  # cors_allow_origins: "- \".+.example.com\"\n- \"otherdomain.com\""
+  # cors_allow_methods: "- \"GET\"\n- \"POST\""
+  # cors_allow_headers: "- \"Authorization\"\n- \"content-type\""
+  # stream_allow_origins: "- \".+.example.com\"\n- \"otherdomain.com\""
+  stream_period_seconds: 45
+  password_strength: 10
 
 envFrom:
-  - configMapRef:
-      name: gotifyenv
+  - secretRef:
+      name: '{{ include "tc.common.names.fullname" . }}-secret'
 
 service:
   main:
     ports:
       main:
         port: 10084
-        targetPort: 8080
 
 persistence:
   data:
