--- a/charts/stable/cloudflareddns/values.yaml
+++ b/charts/stable/cloudflareddns/values.yaml
@@ -11,23 +11,23 @@ podSecurityContext:
   runAsUser: 0
   runAsGroup: 0
 
-secretEnv:
-  CF_APITOKEN: ""
-  CF_APIKEY: ""
-  CF_APITOKEN_ZONE: ""
-
-env:
-  DETECTION_MODE: '{{ ternary .Values.env.DETECT_MODE .Values.env.DETECT_OVERRIDE (eq .Values.env.DETECT_OVERRIDE "") }}'
-  # Use Defined
-  INTERVAL: 300
-  DETECT_MODE: "dig-whoami.cloudflare"
-  DETECT_OVERRIDE: ""
-  LOG_LEVEL: 3
-  cloudflareddns: ""
-  CF_USER: "your.cf.email@example.com"
-  CF_HOSTS: "test.example.com;test.foobar.com;test2.foobar.com"
-  CF_ZONES: "example.com;foobar.com;foobar.com"
-  CF_RECORDTYPES: "A;A;AAAA"
+cloudflareddns:
+  user: "your.cf.email@example.com"
+  api_token: ""
+  api_key: ""
+  api_token_zone: ""
+  detection_mode: '{{ ternary .Values.cloudflareddns.detect_mode .Values.cloudflareddns.detection_mode (eq .Values.env.detection_mode "") }}'
+  interval: 300
+  detect_mode: "dig-whoami.cloudflare"
+  detect_override: ""
+  log_level: 3
+  host_and_record:
+    - domain: example.com
+      type: A
+    - domain: foobar.com
+      type: A
+    - domain: foobar.com
+      type: AAAA
 
 probes:
   liveness:
@@ -36,6 +36,10 @@ probes:
     enabled: false
   startup:
     enabled: false
+
+envFrom:
+  - secretRef:
+      name: '{{ include "tc.common.names.fullname" . }}-secret'
 
 service:
   main:
