--- a/charts/stable/cloudflareddns/questions.yaml
+++ b/charts/stable/cloudflareddns/questions.yaml
@@ -115,6 +115,31 @@ questions:
                         type: string
                         required: true
                         default: "A"
+        - variable: zones
+          label: Zones
+          schema:
+            type: list
+            default: []
+            items:
+              - variable: zoneEntry
+                label: Zone Entry
+                schema:
+                  type: dict
+                  additional_attrs: true
+                  attrs:
+                    - variable: domain
+                      label: Domain
+                      schema:
+                        type: string
+                        required: true
+                        default: "example.com"
+                        valid_chars: '^((?!\.cf$|\.ga$|\.gq$|\.ml$|\.tk$).)*$'
+                    - variable: type
+                      label: Record Type
+                      schema:
+                        type: string
+                        required: true
+                        default: "A"
 # Include{containerConfig}
 # Include{serviceList}
 # Include{persistenceRoot}
