--- a/charts/incubator/youtrack/templates/common.yaml
+++ b/charts/incubator/youtrack/templates/common.yaml
@@ -1,2 +1,7 @@
+{{/* Make sure all variables are set properly */}}
+{{- include "tc.common.loader.init" . }}
+
+{{- $_ := set .Values.initContainers "configure" (include "youtrack.init" . | fromYaml) -}}
+
 {{/* Render the templates */}}
-{{ include "tc.common.loader.all" . }}
+{{ include "tc.common.loader.apply" . }}
