--- a/charts/incubator/youtrack/values.yaml
+++ b/charts/incubator/youtrack/values.yaml
@@ -16,6 +16,7 @@ youtrack:
   hubURL: ""
   defaultPage: /dashboard
   support_email: youtrack-feedback@jetbrains.com
+  authThrottlingEnabled: false
   disableCheckForUpdate: false
   minPrefixQueryLength: 3
   mailLimit: 0
